--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 	  <div class="row" style="background-color: #444444">
 		<div class="col-sm-4">
 
-		  <p>&copy 2016 Allan Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a> at <a href="https://www.leidenuniv.nl">Leiden University</a>.</p>
+		  <p>&copy 2022 NCL@MICS. Site made with <a href="https://jekyllrb.com">Jekyll</a> and hosted with <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+              <p>We are part of the <a href="https://www.mics.ece.vt.edu/">Multifunctional Integrated Circuits and Systems (MICS)</a> group at the <a href="https://www.vt.edu/">Virginia Tech</a> university.</p>
 
 
 		   <p>  </p><p>
@@ -14,17 +14,17 @@
 		</div>
 		<div class="col-sm-4">
 		  Funding:<br />
-      - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
+      - Funding 1<br />
+		  - Funding 2<br />
+		  - Funding 3
 		</div>
 		<div class="col-sm-4">
-		  Contact:<br />
-		  Oort building, Leiden University<br />
-		  Niels Bohrweg 2<br />
-		  2333 CA Leiden<br />
-		  Netherlands <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+		  Contact Address:<br />
+		  477-Whittemore Hall<br />
+		  1185 Perry St<br />
+		  24061, Blacksburg<br />
+		  Virginia, USA <br />
+            (<a href="https://www.vt.edu/about/locations/buildings/whittemore-hall.html">Building</a>, <a href="https://goo.gl/maps/HKoFaGFPryPK36hE6">Google Maps</a>)
 		</div>
 	  </div>
 	</div>
