--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -11,13 +11,22 @@ layout: default
   <br>
   </div>
 
-  <!--<div id="newsid" class="col-sm-4" >-->
-  <div id="newsid" class="row">
-  <div class="col-sm-8" >
-	{% include news.html %}
-  </div>
-  <div class="col-sm-4" >
-	{% include news.html %}
-  </div>
-  </div>
+  <div id="homeinfo" class="col-md-12">
 
+    <div class="col-md-8">
+      {% include news.html %}
+    </div>
+
+    <div class="col-md-4">
+      <div class="row-fluid">
+        <div class="span">
+        {% include sponsors.html %}
+        </div>
+
+        <div class="span">
+        {% include announcements.html %}
+        </div>
+      </div>
+    </div>
+
+  </div>
